# connector-x-pooling

./: .gitignore  Cargo.toml  Justfile  README.md  test_pool.py  test_pool_simple.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  import-test.yml  release.yml
connectorx-cpp/src/: lib.rs
connectorx-pooling/: Cargo.toml
connectorx-pooling-cpp/: Cargo.toml
connectorx-pooling-cpp/src/: lib.rs
connectorx-pooling-python/: Cargo.toml  pyproject.toml
connectorx-pooling-python/connectorx_pooling/: __init__.py
connectorx-pooling-python/src/: lib.rs
connectorx-pooling/src/: fed_dispatcher.rs  get_arrow.rs  pool.rs
connectorx-pooling/tests/: test_arrow.rs  test_polars.rs  test_postgres.rs
connectorx-python/: Cargo.toml
connectorx-python/connectorx/: __init__.py
connectorx-python/src/: arrow.rs  cx_read_sql.rs  lib.rs  pool.rs
connectorx/src/: fed_dispatcher.rs  get_arrow.rs  lib.rs  partition.rs  pool.rs
rust-docs/: src-files.js
rust-docs/connectorx/: all.html  index.html  sidebar-items.js
rust-docs/search.index/: 00105726615c.js  0053bd400a79.js  009170026909.js  037d3aa0c6e4.js  04958058a961.js  04dd9d6da343.js  055e0bee2990.js  057f5fd87189.js  05b5d4b544ea.js  06a95794e63a.js  06e5fdf06b47.js  071fcf553155.js  0877f94323fa.js  095de22b5b89.js  0a4473beb1ab.js  0b6434a21014.js  0cf4fa031ce4.js  0dc32ab31cf7.js  0e50702340ba.js  0f56516c654a.js  0f6f6bece9e2.js  0fd2255de6f2.js  0fd6ab0f737d.js  10a1729de7d8.js  115410e65ad1.js  13abe952ef13.js  170428219052.js  1868b3ddd306.js  188f737b9e4d.js  (+88 more)
(+268 files in other folders)
