[workspace]
default-members = ["connectorx-pooling"]
members = ["connectorx-pooling", "connectorx-pooling-cpp"]
resolver = "2"

[profile.release]
debug = true
lto = true

[workspace.dependencies]
arrow = {version = "54", features = ["prettyprint", "ffi"]}
polars = {version = "0.49", features=["dtype-u8", "dtype-u16", "lazy"]}
polars-arrow = {version = "0.49"}